# isekai

./: .editorconfig  .gitignore  .gitmodules  .hgignore  .hgsub  .hgsubstate  CMakeLists.txt  ISEKAI.DEF  ISEKAI.MAK  Makefile  PROCIRCD.DEF  PROCIRCD.MAK  ProCIRCd.cbp  ProCIRCd.sln  ProCIRCd.vcxproj  README.md  isekai.cbp  isekai.dsk  isekai.prj  isekai.sln  isekai.vcxproj
android/app/: CMakeLists.txt  build.gradle
android/app/src/androidTest/java/info/interfinitydynamics/isekai/: ExampleInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: native-lib.cpp
android/app/src/main/java/info/interfinitydynamics/isekai/: MainActivity.java
android/app/src/main/res/drawable/: ic_launcher_background.xml
android/app/src/main/res/drawable-v24/: ic_launcher_foreground.xml
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml
android/app/src/test/java/info/interfinitydynamics/isekai/: ExampleUnitTest.java
plugins/isometer/: isometer.c  isometer.cbp
plugins/pov/: pov.c  pov.cbp
plugins/topdown/: Makefile  topdown.c  topdown.cbp
src/: Makefile  action.c  action.h  animate.c  animate.h  audition.c  audition.h  b64.c  b64.h  backlog.c  backlog.h  bstrglue.c  bstrglue.h  callback.c  callback.h  callbacks.c  callbacks.h  channel.c  channel.h  chunker.c  chunker.h  client.c  client.h  clistruct.h  colors.h  config.h  connect.c  connect.h  connection.c  connection.h  datafile.c  datafile.h  ezxml.c  ezxml.h  files.c  files.h  font.h  gamedata.c  gamedata.h  graphics.c  (+55 more)
src/algif/: algif.c  algif.h  gif.c  lzw.c
src/b64/: b64.c  b64.h
src/bstrlib/: bsafe.c  bstest.c  bstraux.c  bstraux.h  bstrlib.c  bstrlib.h  bstrwrap.cpp  bstrwrap.h
src/client/: local2d.c  localray.c
src/datafile/: null.c  xml.c
src/duktape/: duk_config.h  dukhelp.h  duktape.c  duktape.h  duktype.h
src/ezxml/: ezxml.c  ezxml.h
src/graphics/: allegro.c  allegrog.c  curses.c  cursesg.c  null.c  nullg.c  sdlg.c  win16g.c  win32g.c
src/heatshrink/: heatshrink_config.h  heatshrink_decoder.c  heatshrink_decoder.h  heatshrink_encoder.c  heatshrink_encoder.h
src/hs/: heatshrink_decoder.h  heatshrink_encoder.c  hs_conf.h  hsdecode.c  hsdecode.h  hsencode.c  hsencode.h
src/input/: allegro.c  allegroi.c  curses.c  null.c  nulli.c  sdli.c  win16i.c  win32i.c
src/ipc/: netipc.c  shmipc.c  syncbuff.c  syncbuff.h
src/mode/: local2d.c  localiso.c  localray.c  pov.h  topdown.h
src/plugins/: Makefile  isometer.c  pov.c  topdown.c  topdown.cbp
src/proto/: irc.c  shmp.c
src/savestat/: s_sqlite.c
src/storage/: sqlite.c
src/tinypy/: tinypy.c  tinypy.h
src/ui/: graphicu.c  nullu.c  win16u.c  win32u.c
src/vm/: duktapev.c  tinypyv.c
test/: check_b64.c  check_channel.c  check_chunker.c  check_client.c  check_connection.c  check_data.c  check_data.h  check_hashmap.c  check_main.c  check_ray.c  check_syncbuff.c  check_vector.c
web/: gruntfile.js  package.json
web/htdocs/: index.html
